--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:800&display=swap');*/
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+main{min-height: calc(100vh - 112px);}
+.wrapper{
+    padding: 50px 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+*{
+    outline: 0;
 }
+
+.scroll_off { overflow: hidden; }
+
+.show_block {
+    opacity: 1 !important;
+    transition: all 0.5s ease;
+    visibility: visible !important;
+}
+
+.hide {
+    opacity: 0 !important;
+    transition: all 0.5s ease;
+    visibility: hidden !important;
+}
+
+.full_page {
+    opacity: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+footer { opacity: 0; }
+
+.get_started { opacity: 0; }
+
+.header-wr { opacity: 0; }
+
+body { margin: 0; }
+
+#loader {
+    -webkit-animation-timing-function: ease;
+    animation-timing-function: ease;
+    background: #99FF99;
+    border-radius: 0 60px 60px 22px/0 60px 60px 0;
+    height: 10px;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 0;
+    z-index: 9999;
+}
+
+/*#loader:after {
+            display: block;
+            position: absolute;
+            content: '';
+            right: 0px;
+            width: 100px;
+            height: 100%;
+            box-shadow: #99FF99 1px 0 6px 1px;
+            opacity: 0.5;
+        }*/
+
